--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "leaflet": "^1.4.0",
+    "leaflet-geosearch": "^2.7.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
-    "vue2-leaflet": "^2.0.3"
+    "vue2-leaflet": "^2.0.3",
+    "vue2-leaflet-geosearch": "^1.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
